# TriWild

./: CMakeLists.txt
cmake/recipes/: aabbcc.cmake  libigl.cmake  nlopt.cmake
src/triwild/: feature.cpp  feature_preprocessing.cpp
